Make sure spacing is 40px 91070521 (#198)
Make sure spacing is 40px 91070521

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -19,7 +19,7 @@ $tiny-border-radius: $border-radius !default;
 $big-border-radius: $border-radius !default;
 $small-border-radius: $border-radius !default;
 
-$contenttable-spacing-single-side: 2rem;
+$contenttable-spacing-single-side: 2.353rem;
 
 // Shared variables for tutorials-overview page components
 $tutorials-overview-tile-margin-single-side: 2px;
